@@ -8,6 +8,7 @@
   [NON BACKWORD COMPATIBLE CHANGES]
   * Remove non-documented lib_link_abs from SPVM::Builder::Config.
   * native library is linked as relative path, not absolute pass by default.
+  * Remove add_dynamic_libs from SPVM::Builder::Config.
 0.9613 2022-06-27
   [CHANGE]
   * Fix descriptor error message.
